--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,7 +9,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: var(--neutral-black);
+    background: var(--neutral-white);
     color: var(--neutral-white);
     font-family: 'Poppins', 'sans-serif';
 }
