--- a/src/components/OverviewGraph/OverviewGraph.module.css
+++ b/src/components/OverviewGraph/OverviewGraph.module.css
@@ -1,7 +1,7 @@
 .container {
   border-radius: 25px;
   background-color: #141517;
-  height: 700px;
+  height: 400px;
   padding: 20px;
 }
 
@@ -25,9 +25,41 @@
 .graph {
   width: 75%;
   height: 100%;
+  padding: 0%;
+}
+
+.sideinfo {
+  padding: 0%;
+  width: 25%;
+  height: 100%;
 }
 
 .stack {
-  width: 25%;
   height: 100%;
+  align-items: stretch;
+  justify-content: center;
+}
+
+.change {
+  height: 35%;
+  width: 100%;
+  border-radius: 10px;
+  background-color: #373A40;
+  color: #F8F9FA;
+}
+
+.income {
+  height: 20%;
+  background-color: #51CF66;
+  width: 100%;
+  border-radius: 10px;
+  color: #F8F9FA;
+}
+
+.expenses {
+  height: 20%;
+  background-color: #FA5252;
+  width: 100%;
+  border-radius: 10px;
+  color: #F8F9FA;
 }
