--- a/src/styles/landingpage.module.css
+++ b/src/styles/landingpage.module.css
@@ -1,11 +1,8 @@
 .mainSection {
     background: var(--neutral-black);
-    height: 105vh;
-    box-shadow: 5px 5px 40px 45px rgba(0, 0, 0, 0.4);
-    position: relative;
+    height: fit-content;
     z-index: 1;
 }
-
 
 .topbar {
     display: flex;
@@ -108,10 +105,11 @@
     color: var(--neutral-white);
     font-size: 3.5rem;
     font-weight: 600;
+    width: 85%;
 }
 
 .mainHero h6 {
-    color: #c2c2c2;
+    color: #d6d6d6;
     font-size: 1.25rem;
     font-weight: 400;
 }
@@ -144,15 +142,16 @@
 .mainImageContainer {
     width: 100%;
     height: 100%;
-    margin-top: 65px;
+    margin-top: 100px;
     display: flex;
     justify-content: center;
     align-items: top;
+    position: relative;
 }
 
 .mainImage {
     width: 75%;
-    height: 75%;
+    height: 700px;
     background: black;
     border-radius: 45px;
     border: 5px solid var(--neutral-black);
@@ -160,11 +159,20 @@
     box-shadow: 0px 5px 25px 25px rgba(0, 0, 0, 0.2);
 }
 
+.imageBackgroundExtension {
+    background: var(--neutral-white);
+    height: 400px;
+    width: 100%;
+    position: absolute;
+    top: 60%;
+}
+
 .overviewSection {
     background: var(--neutral-white);
-    height: 125vh;
-    position: relative;
+    height: fit-content;
     z-index: 0;
+    position: relative;
+    padding-top: 100px;
 }
 
 @media (max-width: 1000px) {
