--- a/src/styles/landingpage.module.css
+++ b/src/styles/landingpage.module.css
@@ -2,7 +2,27 @@
     background: var(--neutral-black);
     height: fit-content;
     z-index: 1;
+    position: relative;
 }
+
+/* .circleBorder {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    background: linear-gradient(to right, red, black, black, rgb(0, 0, 0));
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.circleBackground {
+    width: 90%;
+    height: 90%;
+    border-radius: 50%;
+    background: var(--neutral-black);
+    z-index: 2;
+} */
 
 .topbar {
     display: flex;
@@ -106,13 +126,17 @@
 
 .mainHero h1 {
     color: var(--neutral-white);
-    font-size: 3.5rem;
+    font-size: calc(4.5vw + 1vh);
     font-weight: 600;
+}
+
+.mainHero h1 span{
+    display: block;
 }
 
 .mainHero h6 {
     color: #d6d6d6;
-    font-size: 1.25rem;
+    font-size: calc(0.85vw + 1vh);
     font-weight: 400;
     width: 75%;
 }
@@ -145,7 +169,7 @@
 .mainImageContainer {
     width: 100%;
     height: 100%;
-    margin-top: 50px;
+    margin-top: 75px;
     display: flex;
     justify-content: center;
     align-items: top;
@@ -159,7 +183,7 @@
     border-radius: 45px;
     border: 5px solid var(--neutral-black);
     z-index: 1;
-    box-shadow: 0px 3px 15px 15px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 10px 20px 20px rgba(0, 0, 0, 0.2);
 }
 
 .mainBackgroundExtension {
@@ -174,7 +198,7 @@
     background: var(--neutral-white);
     height: fit-content;
     position: relative;
-    padding: 50px 5% 50px;
+    padding: 100px 5% 100px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -227,23 +251,103 @@
 
 .overviewCardImage {
     position: absolute;
-    width: 295px;
-    height: 170px;
+    width: 325px;
+    height: 190px;
     transform: rotate(45deg);
     bottom: 120px;
-    left: -125px;
+    left: -135px;
     z-index: 0;
 }
 
 .overviewImage {
     position: relative;
-    width: 195px;
-    height: 385px;
+    width: 225px;
+    height: 450px;
     background: black;
     border-radius: 35px;
     border: 5px solid var(--neutral-black);
     box-shadow: 0px 3px 15px 15px rgba(0, 0, 0, 0.2);
     z-index: 1;
+}
+
+.featuresSection {
+    background: var(--neutral-black);
+    height: fit-content;
+    z-index: 1;
+    position: relative;
+    padding: 100px 5% 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+    justify-content: center;
+    align-items: center;
+}
+
+.featuresHero {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 85%;
+}
+
+.featuresHero span {
+    display: block;
+}
+
+.featuresHero h1 {
+    color: var(--neutral-white);
+    font-size: calc(1.5vw + 1vh);
+    font-weight: 600;
+}
+
+.featuresHero h6 {
+    color: rgb(185, 185, 185);
+    font-size: calc(0.5vw + 1vh);
+    font-weight: 400;
+    max-width: 35%;
+}
+
+.featuresContainer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 50px;
+    width: 100%;
+}
+
+.box {
+    width: 325px;
+    height: 375px;
+    border: 7px solid var(--neutral-white);
+    border-radius: 35px;
+    color: white;
+    padding: 0 25px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: start;
+    box-shadow: 5px 5px 15px 15px rgba(0, 0, 0, 0.2);
+    margin: 0 25px 0;
+}
+
+.temporaryPlaceholder {
+    width: 60px;
+    height: 60px;
+    background: var(--neutral-white);
+    border-radius: 15px;
+}
+
+.content h3 {
+    color: var(--neutral-white);
+    font-size: 32px;
+    font-weight: 400;
+}
+
+.content p {
+    color: #adadad;
+    font-size: 15px;
+    font-weight: 400;
 }
 
 @media (max-width: 1350px) {
@@ -302,16 +406,12 @@
         margin-top: 5rem;
     }
 
-    .mainHero h1 {
-        font-size: calc(3vw + 1vh);
-    }
-
-    .mainHero h6 {
-        font-size: calc(0.85vw + 1vh);
-    }
-
     .mainImage {
         height: 450px;
+    }
+
+    .mainBackgroundExtension {
+        height: 200px;
     }
 }
 
@@ -326,14 +426,55 @@
     .mainImage {
         height: 350px;
     }
+
+    .featuresSection {
+        padding-top: 50px;
+        gap: 50px;
+    }
+
+    .featuresHero {
+        flex-direction: column;
+        text-align: center;
+        gap: 5px;
+    }
+
+    .featuresHero h1 {
+        font-size: calc(2.5vw + 1vh);
+    }
+    
+    .featuresHero h6 {
+        font-size: calc(1.25vw + 1vh);
+        max-width: none;
+    }
+
+    .content h3 {
+        font-size: calc(3vw + 1vh);
+    }
+    
+    .content p {
+        font-size: calc(1.25vw + 1vh);
+    }
 }
 
 @media (max-width: 500px) {
-    .overviewSection {
-        padding-top: 55px;
+    .circle {
+        width: 40px;
+        height: 40px;  
     }
 
     .mainImage {
         height: 250px;
+    }
+
+    .mainBackgroundExtension {
+        height: 100px;
+    }
+
+    .overviewSection {
+        padding-top: 55px;
+    }
+
+    .overviewHero {
+        padding-top: 25px;
     }
 }
