--- a/src/styles/landingpage.module.css
+++ b/src/styles/landingpage.module.css
@@ -111,31 +111,51 @@
     height: 100%;
     list-style: none;
     gap: 50px;
-    font-size: 18px;
+    font-size: 22px;
 }
 
-.burgerContentContainer {
-    z-index: 1000;
+.topbarLinks li a, .topbar a {
+    text-decoration: none;
+    cursor: pointer;
+    color: var(--neutral-white);
 }
 
-.burger {
+.userReg {
+    background: var(--neutral-black);
     display: flex;
-    justify-content: center;
-    align-items: center;
-    display: none;
+    gap: 30px;
+}
+
+.loginButton {
+    border: 0;
+    outline: 0;
+    background: none;
+    font-family: 'Poppins', sans-serif;
+    font-size: 22px;
+    cursor: pointer;
+    color: var(--neutral-white);
+}
+
+.rgstrButton {
+    font-family: 'Poppins', sans-serif;
+    color: var(--neutral-white);
+    font-size: 22px;
+    background: none;
+    outline: 0;
+    padding: 8px 15px 8px;
+    border: 2px solid var(--neutral-white);
+    border-radius: 10px;
+    cursor: pointer;
+    color: var(--neutral-white);
+    transition: 0.2s ease-in-out;
 }
 
 .burgerMenuContainer {
     display: none;
 }
 
-.topbarLinksBurger {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    list-style: none;
+.burgerContentContainer {
+    z-index: 1000;
 }
 
 .menuActive {
@@ -149,10 +169,13 @@
     z-index: 4;
 }
 
-.topbarLinks li a, .topbar a {
-    text-decoration: none;
-    cursor: pointer;
-    color: var(--neutral-white);
+.topbarLinksBurger {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    list-style: none;
 }
 
 .topbarLinksBurger li {
@@ -168,42 +191,6 @@
 
 .topbarLinksBurger li:hover {
     background: grey;
-}
-
-.userReg {
-    background: var(--neutral-black);
-    display: flex;
-    gap: 30px;
-}
-
-.userRegBurger {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-
-.loginButton {
-    border: 0;
-    outline: 0;
-    background: none;
-    font-family: 'Poppins', sans-serif;
-    font-size: 18px;
-    cursor: pointer;
-    color: var(--neutral-white);
-}
-
-.rgstrButton {
-    font-family: 'Poppins', sans-serif;
-    color: var(--neutral-white);
-    font-size: 18px;
-    background: none;
-    outline: 0;
-    padding: 8px 15px 8px;
-    border: 2px solid var(--neutral-white);
-    border-radius: 10px;
-    cursor: pointer;
-    color: var(--neutral-white);
-    transition: 0.2s ease-in-out;
 }
 
 .mainHero {
@@ -291,7 +278,7 @@
     background: var(--neutral-white);
     height: fit-content;
     position: relative;
-    padding: 100px 5% 100px;
+    padding: 7% 3% 10% 3%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -379,7 +366,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 85%;
 }
 
 .featuresHero span {
@@ -388,27 +374,28 @@
 
 .featuresHero h1 {
     color: var(--neutral-white);
-    font-size: calc(1.5vw + 1vh);
+    font-size: calc(2.5vw + 1vh);
     font-weight: 600;
 }
 
 .featuresHero h6 {
     color: rgb(185, 185, 185);
-    font-size: calc(0.5vw + 1vh);
+    font-size: calc(1vw + 1vh);
     font-weight: 400;
-    max-width: 35%;
+    max-width: 50%;
 }
 
 .featuresContainer {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    flex-wrap: wrap;
-    gap: 50px;
+    width: 100%;
+    row-gap: 50px;
 }
 
 .box {
-    height: 375px;
+    height: 450px;
+    width: 400px;
     border: 7px solid var(--neutral-white);
     border-radius: 35px;
     color: white;
@@ -420,7 +407,9 @@
     box-shadow: 5px 5px 15px 15px rgba(0, 0, 0, 0.2);
     margin: 0 25px 0;
     min-width: 225px;
-    max-width: 325px;
+    max-width: 400px;
+    min-height: 250px;
+    max-height: 450px;
 }
 
 .temporaryPlaceholder {
@@ -448,8 +437,7 @@
     }
 
     .overviewSection {
-        flex-direction: column;
-        padding-top: 13%;
+        padding: 10% 3% 10% 3%;
     }
 
     .c4 {
@@ -465,7 +453,7 @@
         min-width: 2%;
         height: auto;
         top: 15%;
-        right: 35%;
+        right: 15%;
     }
     
     .c6 {
@@ -501,6 +489,10 @@
     .overviewImage {
         width: 195px;
         height: 385px;
+    }
+
+    .box {
+        height: 350px;
     }
 }
 
@@ -556,6 +548,14 @@
         font-size: calc(1.25vw + 1vh);
         max-width: none;
     }
+
+    .featuresContainer {
+        flex-wrap: wrap;
+    }
+
+    .box {
+        width: 300px;
+    }
 }
 
 @media (max-width: 750px) {
@@ -565,6 +565,9 @@
     
     .mainImage {
         height: 350px;
+    }
+    .overviewSection {
+        padding: 12% 3% 10% 3%;
     }
 
     .featuresSection {
@@ -579,6 +582,7 @@
     .content p {
         font-size: calc(1.25vw + 1vh);
     }
+
 }
 
 @media (max-width: 500px) {
@@ -597,22 +601,19 @@
     .mainBackgroundExtension {
         height: 100px;
     }
-
-    .overviewSection {
-        padding-top: 55px;
-    }
-
-    .overviewHero {
-        padding-top: 25px;
-    }
-
-    .box {
-        height: 300px;
-    }
 }
 
 @media (max-width: 350px) {
     .box {
-        height: 250px;
+        width: 250px;
+        height: 300px;
+    }
+    .c5 {
+        top: 25%;
+    }
+
+    .c6 {
+        bottom: 20%;
+        left: 80%;
     }
 }
