--- a/src/styles/landingpage.module.css
+++ b/src/styles/landingpage.module.css
@@ -61,13 +61,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: fit-content;
-    padding: 25px;
     width: 100%;
+    height: 6rem;
+    padding: 25px;
 }
 
 .topbarBurger {
-    border-bottom: 5px solid rgb(255, 255, 255);
+    border-bottom: 3px solid rgb(255, 255, 255);
 }
 
 .topbarBrand {
@@ -151,11 +151,8 @@
 }
 
 .burgerMenuContainer {
+    height: 100%;
     display: none;
-}
-
-.burgerContentContainer {
-    z-index: 1000;
 }
 
 .menuActive {
@@ -167,6 +164,14 @@
     top: 0;
     overflow: hidden;
     z-index: 4;
+}
+
+.burgerContentContainer {
+    z-index: 1000;
+}
+
+.burger2 {
+    padding-right: 47px;
 }
 
 .topbarLinksBurger {
@@ -520,6 +525,8 @@
 
     .burger, .burgerMenuContainer {
         display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .mainHero {
