--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,131 +1,10 @@
+
 *{
-    background-color: black;
+  font-family: 'Poppins', sans-serif;
+  background-color: black;
+
 }
 
-#transactionsTab{
-    width: 800px;
-    height: 500px;
-    border-radius: 50px;
-    position: absolute;
-    bottom: 30px;
-    left: 30px;
-}
-.recent, .allTrans, .transactionsLink{
-    color: white;
-}
-.name, .date, .category, .amount{
-    color: #C1C2C5
-}
 
-.recent{
-    display:inline-block; 
-    position: relative;
-    left: 60px;
-    font-size: 35px;
-}
-
-.allTrans, .transactionsLink{
-    background-color: #1F1F1F;
-    width: 194.68px;
-    height: 44.31px;
-}
-
-.allTrans{
-    font-size: 20px;
-    position: relative;
-    margin-left: 260px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding: 10px;
-    border-radius: 10px;
-    bottom: 5px;
-}
-
-.Header{
-    border-radius: 50px;    
-}
-
-.columnTitles{
-    height: 80px;
-    width: 90%;
-    display: flex;
-    position:absolute;
-    left: 50px;
-    top: 90px
-}
-
-.name, .date, .category, .amount{
-    font-size: 17px;
-}
-.nameDate{
-    position: absolute;
-    left: 20px;
-}
-.date{
-    position: absolute;
-    top: 30px;
-    font-size: 14px;
-}
-
-.catAmount{
-    display: flex;
-    position: absolute;
-    left: 480px;
-}
-
-.amount{
-    position: absolute;
-    left: 150px;
-}
-
-.transactions{
-    height: 50px;
-    width: 84%;
-    display: flex;
-    position: absolute;
-    left: 70px;
-    top: 200px;
-    border-bottom: 1px solid grey;  
-}
-
-.transDesc{
-    font-size: 20px;
-    color: white;
-    position: relative;
-    bottom: 20px;
-    /* left: 70px; */
-    /* top: 30px; */
-    background-color: transparent;
-}
-.transCatAmount{
-    position: relative;
-    left: 320px;
-}
-.transCat{
-    font-size: 17px;
-    position:absolute;
-    /* top: 60px; */
-    /* left: 50px; */
-    color: white;
-    background-color: green;
-    padding: 3px;
-    padding-left: 20px;
-    padding-right: 20px;
-    border-radius: 20px;
-}
-
-.transAmnt{
-    font-size: 17px;
-    position:relative;
-    /* top: 60px; */
-    left: 165px;
-    align-self: flex-end;
-    color: red;
-}
-
-#transactionsTab, .recent, .Header, .columnTitles, .nameDate, .name, .date, .category, .amount, .catAmount, .transactions, .title, .date, .transAmnt{
-    background-color : #07080B;
-    /* background-color: red; */
-}
 
 
