--- a/src/styles/landingpage.module.css
+++ b/src/styles/landingpage.module.css
@@ -170,15 +170,9 @@
     z-index: 1000;
 }
 
-.burger2 {
-    padding-right: 47px;
-}
-
 .topbarLinksBurger {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     height: 100%;
     list-style: none;
 }
@@ -187,11 +181,17 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    padding: 15px;
     transition: 0.2s ease-in;
     cursor: pointer;
     font-size: 25px;
     border-bottom: 1px solid rgb(175, 175, 175);
+}
+
+.topbarLinksBurger li a {
+    width: 100%;
+    height: 100%;
+    padding: 15px;
+    text-align: center;
 }
 
 .topbarLinksBurger li:hover {
@@ -281,7 +281,8 @@
 
 .overviewSection {
     background: var(--neutral-white);
-    height: fit-content;
+    max-height: fit-content;
+    min-height: 100vh;
     position: relative;
     padding: 7% 3% 10% 3%;
     display: flex;
@@ -365,7 +366,8 @@
 
 .featuresSection {
     background: var(--neutral-black);
-    height: fit-content;
+    max-height: fit-content;
+    min-height: 100vh;
     position: relative;
     padding: 100px 5% 100px;
     display: flex;
@@ -450,6 +452,7 @@
     }
 
     .overviewSection {
+        min-height: fit-content;
         padding: 10% 3% 10% 3%;
     }
 
