--- a/src/styles/auth.module.css
+++ b/src/styles/auth.module.css
@@ -1,5 +1,14 @@
 .authBackground {
-    background: var(--neutral-black);
+    background-image: linear-gradient(
+        65deg,
+        rgba(0, 0, 0, 1),
+        rgba(0, 0, 0, 0.9),
+        rgba(0, 0, 0, 0.75),
+        transparent
+      ), url('../images/coinsbackground.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     height: 100vh;
     width: 100vw;
 }
