--- a/src/styles/auth.module.css
+++ b/src/styles/auth.module.css
@@ -11,7 +11,8 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100vh;
+    height: fit-content;
+    min-height: 100vh;
     width: 100vw;
 }
 
@@ -22,6 +23,7 @@
     width: 100%;
     height: 6rem;
     padding: 25px;
+    margin-bottom: 25px;
 }
 
 .topbar a {
@@ -71,13 +73,14 @@
     justify-content: flex-start;
     align-items: flex-start;
     height: fit-content;
-    padding: 75px 50px 50px 75px;
+    width: fit-content;
+    padding: 25px 50px 0 50px;
+    gap: 50px;
 }
 
 .authHero {
     display: flex;
     flex-direction: column;
-    gap: 10px;
     color: var(--neutral-white);
     width: fit-content;
 }
@@ -90,7 +93,7 @@
 
 .authHero h3 {
     font-family: 'Poppins', sans-serif;
-    font-size: calc(1.5vw + 1vh);
+    font-size: calc(1.25vw + 1vh);
     font-weight: 400;
 }
 
@@ -107,17 +110,16 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-    margin-top: 50px;
+    width: 100%;
 }
 
-.nameForm {
-    display: flex;
-    gap: 5%;
+.inputRoot {
+    width: 100%;
 }
 
 .inputLabel {
     color: var(--neutral-white);
-    font-size: calc(1vw + 1vh);
+    font-size: calc(0.75vw + 1vh);
     margin-left: 2px;
 }
 
@@ -134,11 +136,13 @@
 .inputField::placeholder {
     color: var(--neutral-white);
     font-weight: 400;
+    font-size: calc(0.5vw + 1vh);
 }
 
 .inputError {
     margin-left: 5px;
     margin-top: 8px;
+    font-size: calc(0.5vw + 1vh);
 }
 
 .regButtonContainer {
@@ -146,10 +150,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0;
+    margin: 0;
 }
 
 .regButton {
-    font-size: calc(1vw + 1vh);
+    font-size: calc(0.85vw + 1vh);
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
     color: var(--neutral-white);
@@ -159,7 +165,7 @@
     outline: 0;
     border: 0;
     border-radius: 15px;
-    padding: 20px 35px 20px;
+    padding: 20px 25px 20px;
     cursor: pointer;
     transition: 0.3s ease-in;
 }
@@ -168,17 +174,15 @@
     background-position: top;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 1000px) {
     .authBackground {
         background: var(--neutral-black);
-        height: 100vh;
-        width: 100vw;
     }
 
     .authContainer {
         justify-content: center;
         align-items: center;
-        padding: 50px 25px 25px 25px;
+        width: 100%;
     }
 
     .authHero {
@@ -198,13 +202,20 @@
         width: 100%;
     }
 
-    .userForm {
-        border: none;
+    .inputLabel {
+        font-size: calc(1.5vw + 1vh);
+    }
+    
+    .inputField::placeholder {
+        font-size: calc(1.25vw + 1vh);
     }
 
-    .nameForm {
-        flex-direction: column;
-        gap: 15px;
+    .inputError {
+        font-size: calc(0.75vw + 1vh);
+    }
+
+    .regButton {
+        font-size: calc(1.5vw + 1vh);
     }
 }
 
@@ -215,5 +226,18 @@
 
     .topbarLogo {
         display: none;
+    }
+
+    .authContainer {
+        padding: 25px 25px 0 25px;
+    }
+
+    .flexbox {
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .authHero h3 span {
+        display: block;
     }
 }
