--- a/src/styles/auth.module.css
+++ b/src/styles/auth.module.css
@@ -1,7 +1,6 @@
 .authBackground {
     background-image: linear-gradient(
-        65deg,
-        rgba(7, 8, 11, 1),
+        75deg,
         rgba(7, 8, 11, 1),
         rgba(7, 8, 11, 1),
         rgba(7, 8, 11, 1),
@@ -23,7 +22,7 @@
     width: 100%;
     height: 6rem;
     padding: 25px;
-    margin-bottom: 65px;
+    margin-bottom: 25px;
 }
 
 .topbar a {
@@ -78,6 +77,10 @@
     gap: 50px;
 }
 
+.authContainerLogin {
+    min-width: 50%;
+}
+
 .authHero {
     display: flex;
     flex-direction: column;
@@ -88,22 +91,29 @@
 .authHero h1 {
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
-    font-size: calc(3.5vw + 1vh);
+    font-size: calc(3.25vw + 1vh);
 }
 
-.authHero h3 {
+.authHero h3:first-child {
     font-family: 'Poppins', sans-serif;
     font-size: calc(1.25vw + 1vh);
     font-weight: 400;
 }
 
-.authHero h3 span {
+.authHero h3:last-child {
+    font-family: 'Poppins', sans-serif;
+    font-size: calc(0.75vw + 1vh);
+    font-weight: 400;
+}
+
+.authHero h3 span a{
+    text-decoration: none;
     color: #38A0FF;
     cursor: pointer;
 }
 
 .authHero h3 span:hover {
-    text-decoration: underline;
+    text-decoration: #38A0FF underline;
 }
 
 .userForm {
@@ -145,7 +155,7 @@
     font-size: calc(0.5vw + 1vh);
 }
 
-.regButtonContainer {
+.authButtonContainer {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -154,7 +164,7 @@
     margin: 0;
 }
 
-.regButton {
+.authButton {
     font-size: calc(0.85vw + 1vh);
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
@@ -170,8 +180,14 @@
     transition: 0.3s ease-in;
 }
 
-.regButton:hover {
+.authButton:hover {
     background-position: top;
+}
+
+@media (max-width: 2000px) {
+    .authContainerLogin {
+        min-width: none;
+    }
 }
 
 @media (max-width: 1000px) {
@@ -192,9 +208,13 @@
     .authHero h1 {
         font-size: calc(5vw + 1vh);
     }
+
+    .authHero h3:first-child {
+        font-size: calc(2vw + 1vh);
+    }
     
-    .authHero h3 {
-        font-size: calc(2.5vw + 1vh);
+    .authHero h3:last-child {
+        font-size: calc(1.5vw + 1vh);
     }
 
     .authHero {
@@ -221,7 +241,6 @@
 
 @media (max-width: 500px) {
     .topbar {
-        margin-bottom: 25px;
         justify-content: center;
     }
 
