--- a/src/components/OverviewGraph/OverviewGraph.module.css
+++ b/src/components/OverviewGraph/OverviewGraph.module.css
@@ -23,14 +23,14 @@
 }
 
 .graph {
-  width: 75%;
+  width: 70%;
   height: 100%;
   padding: 0%;
 }
 
 .sideinfo {
   padding: 0%;
-  width: 25%;
+  width: 30%;
   height: 100%;
 }
 
@@ -41,7 +41,7 @@
 }
 
 .change {
-  height: 35%;
+  height: 20%;
   width: 100%;
   border-radius: 10px;
   background-color: #373A40;
@@ -61,5 +61,9 @@
   background-color: #FA5252;
   width: 100%;
   border-radius: 10px;
+  color: #F8F9FA;
+}
+
+.summaryTitle {
   color: #F8F9FA;
 }
