--- a/src/components/DashboardReminders/Header/Header.module.css
+++ b/src/components/DashboardReminders/Header/Header.module.css
@@ -4,7 +4,7 @@
 
 #Header{
   position: absolute;
-  top: 2%;
+  top: 4%;
   width: 100%;
 }
 
@@ -24,4 +24,17 @@
   position: absolute;
   top: 17%;
   right: 2%;
+}
+
+.calView{
+  font-family: 'Poppins', sans-serif;
+  color: white;
+  background-color: #1F1F1F;
+  border-radius: 10px;
+  padding: .8% 4% .7% 4%;
+  float: right;  
+  position: absolute;
+  top: 16%;
+  right: 2%;
+  border: 1px solid transparent;
 }
